@@ -1,5 +1,13 @@
 2016-10-27  Alex Christensen  <achristensen@webkit.org>
 
+        Fix Windows WebGL build after r208036
+        https://bugs.webkit.org/show_bug.cgi?id=164101
+
+        * CMakeLists.txt:
+        Add new files, remove deleted files.
+
+2016-10-27  Alex Christensen  <achristensen@webkit.org>
+
         Update ANGLE
         https://bugs.webkit.org/show_bug.cgi?id=164101
 
